# AlgorithmicRobotics

./: README.md
pa0/: roborally.py  roborally_test.py  roborally_test_2.py
pa1/catkin_ws/src/hello/: CMakeLists.txt  PA1.m  hello.py  package.xml  pubvel.py  recordedbag.bag  subpose.py
pa2/: CMakeLists.txt  package.xml  urdf.rviz
pa2/config/: r2d2.yaml
pa2/launch/: r2d2.launch  r2d2jectory.launch  turtlejectory.launch
pa2/models/: empty.world  wall.world
pa2/src/: collision_avoidance.py  drive.py  input.py  pose_change.py  turtlejectory.py  velocity_regulator.py
pa2/urdf/: r2d2.gazebo
pa3/: CMakeLists.txt  package.xml  urdf.rviz
pa3/launch/: r2d2_mapping.launch  turtlejectory.launch
pa3/src/: drive.py  input.py  map_frame.py  mapping.py  r2d2_pose_remapper.py  test.py  turtlejectory.py  twist_noise.py  velocity_regulator.py
pa3/urdf/: r2d2.gazebo  r2d2.urdf  r2d2_noise.gazebo
pa4/: CMakeLists.txt  navigation.rviz  package.xml  search_rescue.rviz  slam.rviz
pa4/Old/: slam.rviz  slam_2.rviz  slam_demo1.rviz  slam_original.rviz
pa4/launch/: navigation.launch  search_rescue_demo.launch  search_rescue_task1.launch  search_rescue_task2.launch  section_1_demo_1.launch  section_1_demo_2.launch  slam.launch
pa4/maps/: amazing.yaml  doras_map.yaml  p3_demo1.yaml
pa4/src/: dead_reckoning.py  drive_around_demo.py  drive_around_task1.py  drive_around_task2.py  dynamic_mapping.py  goal_input.py  kalman_filter.py  landmarks.py  landmarks_demo.py  mapping.py  p1_save.py  p1_score.py  p2_score.py  p3_score.py  path_follower.py  path_follower_task1.py  prm.py  (+12 more)
(+19 files in other folders)
